--- a/bower.json
+++ b/bower.json
@@ -23,6 +23,7 @@
     "angular": "^1.5.3",
     "font-awesome": "fontawesome#^4.5.0",
     "moment": "^2.12.0",
-    "angular-sanitize": "^1.5.3"
+    "angular-sanitize": "^1.5.3",
+    "angular-route": "^1.5.3"
   }
 }
